# CMakeTest

./: CMakeLists.txt
cmake/: FindHELLO.cmake
doc/: hello.txt
src/: CMakeLists.txt  main.cpp
src/dy/: CMakeLists.txt  hello.c  hello.h
src/t5/: CMakeLists.txt  main.c
